--- a/src/SmartMvvm.Xaml/SmartMvvm.Xaml.csproj
+++ b/src/SmartMvvm.Xaml/SmartMvvm.Xaml.csproj
@@ -4,6 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFrameworks>net45;netcoreapp3.0</TargetFrameworks>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <DocumentationFile>bin/SmartMvvm.Xaml.xml</DocumentationFile>
 
     <VersionPrefix>1.0.0</VersionPrefix>
     
