--- a/src/SmartMvvm.Xaml/SmartMvvm.Xaml.csproj
+++ b/src/SmartMvvm.Xaml/SmartMvvm.Xaml.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+
   <PropertyGroup>
     <UseWpf>true</UseWpf>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net452;netcoreapp3.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
+    <TargetFrameworks>net452;netcoreapp3.1</TargetFrameworks>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <DocumentationFile>bin/SmartMvvm.Xaml.xml</DocumentationFile>
 
-    <VersionPrefix>1.3.0</VersionPrefix>
+    <VersionPrefix>2.0.0</VersionPrefix>
     
     <PackageId>SmartMvvm.Xaml</PackageId>
     <PackageTags>WPF;MVVM;UI;XAML;databinding;wpf-ui</PackageTags>
-    <Copyright>Copyright © 2019 Michael Dietrich</Copyright>
+    <Copyright>Copyright © 2021 Michael Dietrich</Copyright>
     <PackageProjectUrl>https://github.com/FrecherxDachs/SmartMvvm.Xaml</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryType>git</RepositoryType>
@@ -18,7 +20,9 @@
     <Authors>Michael Dietrich</Authors>
     <Description>Set of XAML markup utilities for WPF applications.</Description>
   </PropertyGroup>
+
   <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
+
 </Project>
