--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
-version: 2.0.0
+version: 2.0.0.{build}
+skip_tags: true
 image: Visual Studio 2022
 build_script:
 - ps: ./.ci/build.ps1
@@ -9,6 +10,6 @@ artifacts:
 deploy:
 - provider: NuGet
   api_key:
-    secure: FS7OJwqKtXgQLcreC0htCtc30/5f6Hy8oipDyDg0/a1e70pA0uQ+0HxNk+EVdHNi
+    secure: WvkGggPwnMYbDvVC3e2tfWJOCsKG3PsfUtN+l9VsqlvyT0vQrKlrIzaonctNRdWE
   on:
     branch: /^master|release\/.+$/
