--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ test_script:
 - ps: ./.ci/test.ps1
 artifacts:
 - path: artifacts/*.nupkg
+- path: artifacts/*.snupkg
 deploy:
 - provider: NuGet
   api_key:
